--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -7,14 +7,15 @@
 }
 
 .LoginTextLogo{
-    font-family: Exo, sans-serif;
+    font-family: HelveticaBold, sans-serif;
     font-size: 60px;
     font-weight: 700;
     text-align: center;
     margin-top: 157px;
-    color: black;
+    color: #144AE4;
     margin-bottom: 0;
     user-select: none;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .LoginBlock{
@@ -93,7 +94,7 @@
 }
 
 .HeaderLogo{
-    font-family: Exo, sans-serif;
+    font-family: HelveticaBold, sans-serif;
     margin-left: 53px;
     color: white;
     font-size: 20px;
@@ -224,6 +225,20 @@
     width: 648px;
     background: white;
     border-radius: 48px;
+}
+
+.ToDoLists{
+    margin-top: 47px;
+    margin-left: 54px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    margin-bottom: 20px;
+}
+
+.ToDoLists::-webkit-scrollbar {
+    display: none;
 }
 
 @media only screen and (min-width: 200px) and (max-width: 800px) {
