--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -241,6 +241,11 @@
     display: none;
 }
 
+.droppable-component {
+    border-width: 1px;
+    border-color: black;
+}
+
 @media only screen and (min-width: 200px) and (max-width: 800px) {
 
     .LoginTextLogo{
