--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@400;500;600;700&display=swap');
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .MainBackground{
     width: 100%;
     height: 100vh;
